Update swagger, fixing two decimal places when adding a transaction
